working with django, though l/r in CSS isn't displayed correctly

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <!-- <script src="https://unpkg.com/vue"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
   <!-- VUE: -->
-  <script src="{% static 'js/main.js'%}" defer></script>
+  <script src="{% static 'js/vue_main.js'%}" defer></script>
 
   <!-- <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script> -->
 
