--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,47 +1,70 @@
+h1, h2, h3 , h4, h5, h6 {
+    text-align: center;
+}
+header {
+    display: grid;
+    /* grid-column-start: 1; */
+    /* grid-row-start: 2; */
+    justify-content: center;
+    text-align: center;
+    border-bottom: 5px solid #EDF7E1;
+}
 
 body {    
     background-color: #000000;
 }
 main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    /* grid-template-columns: auto 200px auto; */
+    /* grid-template-rows: 5% 90% 5%; */
     color: white;
     margin-left: 1%;
     margin-right: 1%;
 }
+#vue_app {
+    display: flex;
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
 
 /* CANVAS HERE */
 /* flex: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
-#div_left_canvas {
-    padding: 1%;
-    max-width: 100%;
-} 
+/* grid: https://css-tricks.com/snippets/css/complete-guide-grid/ */
 canvas {
-    /* position: fixed; */
     border: 2px solid white;
     border-radius: 10px;
-    background-color: rgb(207, 230, 2);
-    width: 800px;
-    height: 800px;
-    /* max-width: 100%; */
+    background-color: rgb(112, 230, 2);
+    width: 900px;
+    height: 900px;
+    margin: 1%;
+    max-width: 45%;
 }
 
+
+/* RIGHT LOGS HERE */
 #div_right_logs {
-    padding: 1%;
+    /* grid-column-start: 3; */
+    /* grid-row-start: 2; */
+    display: grid;
+    margin: 1%;
     color: white;
     background-color: brown;
     border-radius: 10px;
-    max-width: 100%;
-    width: 400px;
-    height: 400px;
+    width: 500px;
+    height: 500px;
+}
+#mouse_position {
+    text-align: center;
+    font-size: 50px;
+}
+#last_keypress {
+    font-size: 50px;
+    text-align: center;
 }
 #keyboard_logs{
-    /* position: fixed; */
-    color: white;
     background-color: black;
-    font-size: 50px;
+    font-size: 20px;
     font-weight: bolder;
 }
 :fullscreen {
@@ -58,12 +81,6 @@ canvas {
 li, ol {
     font-size: 15px;
 }
-/* h1, h2, h3 , h4, h5, h6 {    text-align: center; } */
-/* header {
-    border-bottom: 5px solid #EDF7E1;
-    margin-bottom: 18px;
-    display: flex;
-} */
 /* footer {
     text-align: center;
     border-bottom: 5px solid #EDF7E1;
@@ -87,11 +104,11 @@ input {
 }
 @media (min-width: 1000px) {   
     #div_left_canvas {
-        max-width: 95%;
+        /* max-width: 45%; */
     }
     #div_right_logs {
-        width: 800px;
-        height: 800px;
-        max-width: 95%;
+        /* width: 800px; */
+        /* height: 800px; */
+        /* max-width: 45%; */
     }
 }
