--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,10 +35,10 @@ canvas {
     border: 2px solid white;
     border-radius: 10px;
     background-color: rgb(112, 230, 2);
-    width: 900px;
-    height: 900px;
+    width: 1300px;
+    height: 1000px;
     margin: 1%;
-    max-width: 45%;
+    /* max-width: 45%; */
 }
 
 
@@ -47,12 +47,13 @@ canvas {
     /* grid-column-start: 3; */
     /* grid-row-start: 2; */
     display: grid;
+    border: 2px solid white;
+    border-radius: 10px;
     margin: 1%;
     color: white;
-    background-color: brown;
     border-radius: 10px;
     width: 500px;
-    height: 500px;
+    height: 1000px;
 }
 #mouse_position {
     text-align: center;
