--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,9 +34,9 @@ main {
 canvas {
     border: 2px solid white;
     border-radius: 10px;
-    background-color: rgb(112, 230, 2);
-    width: 1300px;
-    height: 1000px;
+    background-color: rgb(215, 230, 2);
+    /* width: 1300px; */
+    /* height: 1000px; */
     margin: 1%;
     /* max-width: 45%; */
 }
@@ -51,7 +51,6 @@ canvas {
     border-radius: 10px;
     margin: 1%;
     color: white;
-    border-radius: 10px;
     width: 500px;
     height: 1000px;
 }
@@ -65,8 +64,7 @@ canvas {
 }
 #keyboard_logs{
     background-color: black;
-    font-size: 20px;
-    font-weight: bolder;
+    font-size: 15px;
 }
 :fullscreen {
     background-color: violet;
