--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,9 @@
         @mouseup="stop_drawing"
       >
       </canvas>
-      <!-- </div> -->
+      <div id="button_area">
+        <button @click="clear_canvas">Clear</button>
+      </div>
 
     <div id="div_right_logs">
     
