--- a/templates/home.html
+++ b/templates/home.html
@@ -25,33 +25,65 @@
     
       <!-- https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_usage -->
       <canvas
+        id='canvas_main' 
         width="1300"
-        height="1000"
-        id='canvas' 
+        height="900"
         @mousemove="draw" 
         @mousedown="start_drawing" 
         @mouseup="stop_drawing"
-      >
+        >
+        <!-- From https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Hit_regions_and_accessibility ::: -->
+              <h2>Fallback</h2>
+              <p>Yikes! Your browser cannot display this HTML5 Drawing Canvas: a 1300x900 pixel canvas for toddlers.
+                Perhaps try a different, modern browser on the PC in fullscreen.
+                In the background is a pink circle.
+                Partially overlaying the <a href="https://en.wikipedia.org/wiki/Circle" onfocus="drawCircle();" onblur="drawPicture();">circle</a>.
+                Partially overlaying the circle is a green
+                <a href="https://en.wikipedia.org/wiki/Square" onfocus="drawSquare();" onblur="drawPicture();">square</a>
+                and a purple <a href="https://en.wikipedia.org/wiki/Triangle" onfocus="drawTriangle();" onblur="drawPicture();">triangle</a>,
+                both of which are semi-opaque, so the full circle can be seen underneath.</p>
       </canvas>
+
       <div id="button_area">
+        <button >Fullscreen (F11)</button>
         <button @click="clear_canvas">Clear</button>
       </div>
 
     <div id="div_right_logs">
+
+      <canvas 
+        id="canvas_tree"
+        width="300"
+        height="300"
+        >
+          Fallback: Yikes! Your browser cannot display this HTML5 Drawing Canvas: This is a small tree drawing, credits see footer.
+      </canvas>
     
       <div>
-        {% comment %}
-            Verbatim tag in Django lets me ignore using custom delimeters for Vue vs. Django., see https://vsupalov.com/vue-js-delimiters-django/
-        {% endcomment %}
-      {% verbatim %}
-          <h1 id="mouse_position"> Position: {{ x }}, {{ y }} </h1>
-      {% endverbatim %}
-        <p id="last_keypress">
-        </p>
+          {% comment %}
+              Verbatim tag in Django lets me ignore using custom delimeters for Vue vs. Django., see https://vsupalov.com/vue-js-delimiters-django/
+          {% endcomment %}
+        {% verbatim %}
+            <h1 id="mouse_position"> Position: {{ x }}, {{ y }} </h1>
+        {% endverbatim %}
+          <p id="last_keypress">
+          </p>
+      </div>
+
       <div>
         <p>Full keypress log:</p>
         <p id="keyboard_logs"></p>
       </div>
+
+      <footer>
+        <div id="footer">
+          <h1>Credits</h1>
+          <ul>
+            <li>Tree: Nicole Eyo</li>
+            <li>Smiley: Pete's tutorial</li>
+          </ul>
+        </div>
+      </footer>
     </div>
 
 
