minor, image push

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,6 +46,7 @@
 
       <div id="button_area">
         <button >Fullscreen (F11)</button>
+        <button @click="draw_load_page">Redraw</button>
         <button @click="clear_canvas">Clear</button>
       </div>
 
