--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,11 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
   <!-- VUE: -->
   <script src="{% static 'js/vue_main.js'%}" defer></script>
+  
+  <!-- <script src="{% static 'js/paper.js'%}" defer></script> -->
+  <script src="{% static 'js/fabric.js'%}" defer></script>
+  <!-- <script src="{% static 'js/fabric-nogradients-nopatterns-noshadows.js'%}" defer></script> -->
+  
 
   <!-- <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script> -->
 
