--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Need Axios? -->
+  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script> -->
+
   <!-- development version, includes helpful console warnings -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
   <!-- or: -->    <!-- production version, optimized for size and speed -->
@@ -13,17 +16,24 @@
   <!-- ANOTHER VUE ON A CDN OPTION: -->
   <!-- Include Vue from a CDN of your choice, I chose unpkg -->
   <!-- <script src="https://unpkg.com/vue"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
-  <!-- VUE: -->
-  <script src="{% static 'js/vue_main.js'%}" defer></script>
-  
-  <!-- <script src="{% static 'js/paper.js'%}" defer></script> -->
-  <script src="{% static 'js/fabric.js'%}" defer></script>
-  <!-- <script src="{% static 'js/fabric-nogradients-nopatterns-noshadows.js'%}" defer></script> -->
-  
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script> -->
+  <!-- My Main VUE/Canvas App: -->
+  <script src="{% static 'js/vue_main.js'%}" defer></script>  
 
+  <!-- Trying to get Fabric installed here with a CDN: -->
+      <!-- from https://developer.microsoft.com/en-us/fabric-js/getstarted/getstarted -->
+      <!-- <script src="{% static 'js/fabric-nogradients-nopatterns-noshadows.js'%}" defer></script> -->  
+      <!-- <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.min.css" />
+      <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.components.min.css" /> -->
+      <!-- <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/js/fabric.min.js"></script> -->
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.3.0/fabric.min.js"></script> -->
+  
+  <!-- Forget Fabric, now trying to use Konva, which has a Vue-version! -->
+    <!-- https://konvajs.org/docs/vue/index.html -->
+    <!--1. Link Vue Javascript & Konva-->
+    <!-- <script src='https://unpkg.com/konva@4.0.0/konva.min.js'></script> -->
+    <script src="https://unpkg.com/konva@7.0.3/konva.min.js"></script>
 
   <link rel="stylesheet" href="{% static 'css/github_necolas_normalize.css'%}">
   <link rel="stylesheet" href="{% static 'css/main.css'%}">
