--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,12 +7,14 @@
 
   {% block content %}
       
-    <h1>Existing User Login:</h1>
+    <main>
+      <h1>Existing User Login:</h1>
 
-      <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}        
-        <button type="submit">Login</button>
-      </form>
+        <form method="post">
+          {% csrf_token %}
+          {{ form.as_p }}        
+          <button type="submit">Login</button>
+        </form>
+    </main>
 
   {% endblock %}
